--- a/spleth.frontend/src/App.css
+++ b/spleth.frontend/src/App.css
@@ -1,5 +1,7 @@
 .app {
   text-align: center;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 
@@ -7,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px 40px 0;
+  padding: 20px 40px 0;
 }
 
 .app__header--disconnected {
@@ -25,6 +27,13 @@
   display: initial;
   flex-grow: initial;
   /* margin-bottom: 20px; */
+}
+
+.app__content {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
