--- a/spleth.frontend/src/components/pages/HomePage.css
+++ b/spleth.frontend/src/components/pages/HomePage.css
@@ -3,11 +3,15 @@
     margin: 0 20px;
 }
 
+.home--selected-address {
+    width: 100%;
+}
+
 .home__groups {
     /* flex-grow: 1; */
-    width: 450px;
+    /* width: 450px; */
 }
 
 .home__group {
-    flex-grow: 2;
+    flex-grow: 1;
 }
