--- a/spleth.frontend/src/App.css
+++ b/spleth.frontend/src/App.css
@@ -42,7 +42,7 @@
   font-size: 16px;
   line-height: 22px;
   border-radius: 10px;
-  border: 2px solid #eee;
+  border: 2px solid #eeeeeeb0;
 }
 
 .container__title {
