--- a/spleth.frontend/src/App.css
+++ b/spleth.frontend/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 40px 0;
+  padding: 20px 15vw 0;
 }
 
 .app__header--disconnected {
@@ -71,7 +71,6 @@
 .container__error {
   margin: 10px 0;
   padding: 5px;
-  max-width: 32em;
   border-radius: 6px;
   overflow-wrap: break-word;
   background-color: orangered;
