--- a/spleth.frontend/src/components/commands/Users.css
+++ b/spleth.frontend/src/components/commands/Users.css
@@ -1,10 +1,17 @@
 .users {
-    margin-top: 10px;
+    margin: 10px 10px 0 0;
 }
 
 .users__title {
+    flex-grow: 1;
     text-align: left;
     font-weight: bold;
+}
+
+.users__title-balance {
+    color: #ccc;
+    font-weight: bold;
+    font-size: 13px;
 }
 
 .users__list {
@@ -27,6 +34,15 @@
 
 .users__list-item-adress--hidden {
     display: none;
+}
+
+.users__list-item-balance {
+    color: firebrick;
+    font-size: 13px;
+}
+
+.users__list-item-balance--positive {
+    color: forestgreen;
 }
 
 .users__avatar {
